# deepagents_skills

./: .env_example  .gitignore  README.md  pyproject.toml
.claude/skills/docs/: agent-development-guide.md
docs/: agent_workflow.md
my-chat-ui/: package.json  pnpm-lock.yaml
my-chat-ui/apps/web/src/app/: layout.tsx  page.tsx
my-chat-ui/apps/web/src/app/fastapi/: page.tsx
my-chat-ui/apps/web/src/app/langgraph/: page.tsx
my-chat-ui/apps/web/src/components/thread/: fastapi-thread.tsx  markdown-text.tsx
my-chat-ui/apps/web/src/providers/: FastAPIStream.tsx
src/: __init__.py  api.py  config.py
src/agents/: __init__.py
src/agents/alert_noise_reduction/: __init__.py  agent.py  config.py  tools.py
src/agents/alert_noise_reduction/skills_data/markdown-format/: SKILL.md
src/agents/alert_noise_reduction/skills_data/noise-reduction-analysis/: SKILL.md
src/core/: __init__.py  base_agent.py  events.py  mcp_registry.py  text_buffer.py
